Bugzilla bug 138532: use pipes instead of semaphores for NetBSD, which does not have semaphore.h.  Thanks to Chris Seawood <seawood@netscape.com> for the patch.  Modified files: sslmutex.h sslmutex.c